--- a/consultorio-online-ui/src/main/webapp/index.html
+++ b/consultorio-online-ui/src/main/webapp/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- hellooso -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Consultorio en linea</title>
 	
-	<link rel="stylesheet" type="text/css" href="css/vendor.css"></link>
-	<link rel="stylesheet" type="text/css" href="css/styles.css"></link>
+	<link rel="stylesheet" type="text/css" href="css/vendor.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	
 	
 	
@@ -17,20 +17,20 @@
 </head>
 <body ng-app="main" data-ng-cloak>
 	<navigation></navigation>
+	
 	<id-status></id-status>
-	<div class="content" >
-		<div class="leftColumn" >
+	
+	<div class="content">
+		<div class="leftColumn">
 			<id-card></id-card>
 		</div>
-		<div class="rightColumn" >
+		<div class="rightColumn">
 			<id-appointments></id-appointments>
 			<medical-history></medical-history>
 			<family-history></family-history>
 		</div>
 	</div>
 
-	<div class="footer">
-		<div class="footer-content">Copyright</div>
-	</div>
+	<footer></footer>
 </body>
 </html>
