--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	
 </head>
-<body ng-app="main" data-ng-cloak>ddddddd
+<body ng-app="main" data-ng-cloak>ddddddday
 	<navigation></navigation>
 	
 	<id-status></id-status>
