Upgraded to latest commit

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Consultorio en linea**ssa</title>
+	<title>Consultorio en linea</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/vendor.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -17,7 +17,6 @@
 </head>
 <body ng-app="main" data-ng-cloak>
 	<navigation></navigation>
-	
 	<id-status></id-status>
 	
 	<div class="content">
