Integrated with REST services for the first time (yeaah!) Included Grunt build in Maven Added mock ajax services Set grunt serve to copy files to /test More services

--- a/consultorio-online-web/src/main/ui/html/directives/patientList.html
+++ b/consultorio-online-web/src/main/ui/html/directives/patientList.html
@@ -10,8 +10,8 @@
 	<tbody>
 		<tr ng-repeat="user in ctrl.users" ui-sref="patientDetail">
 			<td>{{user.firstName}} {{user.lastName}}</td>
-			<td></td>
-			<td></td>
+			<td>{{user.lastConsultation | date}}</td>
+			<td>{{user.nextConsultation | date}}</td>
 		</tr>
 	</tbody>
 </table>
