--- a/consultorio-online-web/src/main/ui/index.html
+++ b/consultorio-online-web/src/main/ui/index.html
@@ -5,11 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>Consultorio en linea</title>
-	
+
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor.css"></link>
 	<link rel="stylesheet" type="text/css" href="css/styles.css"></link>
 	
 	<script type="text/javascript" src="js/vendor.js"></script>
+	<script type="text/javascript" src="config.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	
 </head>
